add header nav and footer nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,103 @@
-nav a {
-  text-decoration: none;
+/* ================================= 
+  Base Element Styles
+==================================== */
+
+* {
+  box-sizing: border-box;
 }
 
-li {
-  list-style-type: none;
+body {
+  font-family: 'Josefin Sans', sans-serif;
+  /* font-family: 'Amatic SC', cursive; */
+  line-height: 1.6;
+  color: #3a3a3a;
+  background-color: #F3F3F3;
 }
+
+
+a {
+  text-decoration: none;
+}
+li a:active {
+  background-color: #96E1F9;
+}
+/* ================================= 
+  Base Layout Styles
+==================================== */
+
+/* ---- Navigation ---- */
+
+.name {
+  font-size: 1.25em;
+  margin: 0;
+}
+
+.name,
+.main-nav a {
+  display: block;
+  text-align: center;
+  padding: 10px 15px;
+
+}
+
+.main-nav a {
+  color: #7E7ED6;
+  background-color: #fff;
+  margin-bottom: 15px;
+
+}
+
+
+/* ---- Footer ---- */
+
+footer {
+  padding: 10px 1em;
+  text-align: center;
+
+}
+
+.base-name{
+  font-size: 1.25em;
+  margin: 0;
+}
+.base-nav{
+  border-top: 1px solid lightgray;
+}
+
+.base-nav .base-name {
+  float: left;
+}
+
+.base-nav .base-list {
+  float: right;
+}
+/* ---- Layout Containers ---- */
+
+.wrap{
+  min-height: calc(100vh - 188.81px);
+
+}
+
+.container {
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
+/* ---- Page Elements ---- */
+
+.capital {
+  text-transform: uppercase;
+}
+
+
+/* ---- Float Clearfix ---- */
+.clearfix::after {
+		content: " ";
+		display: table;
+		clear: both;
+	}
+
+/* ================================= 
+  Media Queries
+==================================== */
+
