--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,6 @@
 
 body {
   font-family: 'Josefin Sans', sans-serif;
-  /* font-family: 'Amatic SC', cursive; */
   line-height: 1.6;
   color: #3a3a3a;
   background-color: #F3F3F3;
@@ -66,18 +65,33 @@ header{
 /* ---- Main ---- */
 
 main {
+  padding-top: 10px;
+}
+ section:nth-of-type(odd) {
+  background-color: #ec87fa;
+}
+section:nth-of-type(even) {
+  background-color: #fab387;
+}
+
+main {
   text-align: center;
   background: white;
 }
-
+main h2 {
+  font-family: 'Amatic SC', cursive;
+}
 figure{
   margin: 0;
 } 
-
+section {
+  margin-top: 6px;
+}
 /* ---- Footer ---- */
 
 footer {
   text-align: center;
+  padding-bottom: 16px;
 
 }
 
@@ -87,6 +101,7 @@ footer {
 }
 .base-nav{
   border-top: 1px solid lightgray;
+  padding-top: 10px;
 }
 
 .base-nav .base-name {
@@ -126,6 +141,10 @@ img {
 
 section {
   vertical-align: top;
+  transition: all .2s;
+}
+section:hover {
+  background-color: lightskyblue;
 }
 /* ---- Float Clearfix ---- */
 .clearfix::after {
