--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,10 @@ li a:active {
   color: #7E7ED6;
   display: block;
 }
+
+#collaboration:target {
+  background: lightsalmon;
+}
 /* ---- Header ---- */
 
 header{
@@ -89,12 +93,40 @@ figure{
 section {
   margin-top: 6px;
 }
+
+/* ---- Form ---- */
+
+form {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 10px 20px;
+}
+
+fieldset {
+  border: none;
+}
+
+label {
+  display: block;
+}
+
+input,
+textarea{
+  background-color: #e8eeef;
+  border: none;
+  box-shadow:inset 0 1px 0 black;
+  margin: 0;
+  margin-bottom: 15px;
+  width: 100%;
+  
+  
+}
+
 /* ---- Footer ---- */
 
 footer {
   text-align: center;
   padding-bottom: 16px;
-
 }
 
 .base-name{
